09-kubernetes/exercises/java-mysql/java-mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-mysql
  labels:
    app: java-mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-mysql
  template:
    metadata:
      labels:
        app: java-mysql
    spec:
      containers:
      - name: java-mysql
        image: jimsemara/java-mysql:1.0
        ports: 
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: java-mysql-service
spec:
  selector:
    app: java-mysql-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
